faulty logic but successful loop

--- a/Notebooks/TFIDF_knn.ipynb
+++ b/Notebooks/TFIDF_knn.ipynb
@@ -38,8 +38,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02d6eaef",
+   "metadata": {},
+   "source": [
+    "First we must load our dataset, isolate our dependent and independent variables, and split the dataset into train, validation, and test sets."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c2d58667",
    "metadata": {},
    "outputs": [
@@ -66,7 +74,6 @@
        "      <th></th>\n",
        "      <th>label</th>\n",
        "      <th>comment</th>\n",
-       "      <th>score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -74,31 +81,26 @@
        "      <th>139484</th>\n",
        "      <td>0</td>\n",
        "      <td>Nope.</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>638093</th>\n",
        "      <td>0</td>\n",
        "      <td>Donde esta la biblioteca?</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>662570</th>\n",
        "      <td>0</td>\n",
        "      <td>I feel bad for the mummy... not even the minions want to get close to him :(</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>652534</th>\n",
        "      <td>1</td>\n",
        "      <td>The Pirate Bay, of course!</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>411846</th>\n",
        "      <td>1</td>\n",
        "      <td>That's exactly how multiple photographers ended up on the pavement; they tripped.</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -112,28 +114,21 @@
        "652534      1   \n",
        "411846      1   \n",
        "\n",
-       "                                                                                  comment  \\\n",
-       "139484                                                                              Nope.   \n",
-       "638093                                                          Donde esta la biblioteca?   \n",
-       "662570       I feel bad for the mummy... not even the minions want to get close to him :(   \n",
-       "652534                                                         The Pirate Bay, of course!   \n",
-       "411846  That's exactly how multiple photographers ended up on the pavement; they tripped.   \n",
-       "\n",
-       "        score  \n",
-       "139484      2  \n",
-       "638093      6  \n",
-       "662570      2  \n",
-       "652534      1  \n",
-       "411846      0  "
+       "                                                                                  comment  \n",
+       "139484                                                                              Nope.  \n",
+       "638093                                                          Donde esta la biblioteca?  \n",
+       "662570       I feel bad for the mummy... not even the minions want to get close to him :(  \n",
+       "652534                                                         The Pirate Bay, of course!  \n",
+       "411846  That's exactly how multiple photographers ended up on the pavement; they tripped.  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# reading in csv and            \n",
+    "# reading in csv and confirmation          \n",
     "reddit = pd.read_csv('sample_comments.csv', index_col=[0])\n",
     "\n",
     "reddit.head()"
@@ -141,28 +136,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a0a969c3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# setting X and y\n",
     "X = reddit['comment']\n",
     "y = reddit['label']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "348c4499",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# first split into test and remainder\n",
     "X_rem, X_test, y_rem, y_test = train_test_split(X, y, test_size = 0.25, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "2858e04a",
    "metadata": {},
    "outputs": [],
@@ -172,33 +169,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3440ec79",
+   "metadata": {},
+   "source": [
+    "Now that we have loaded our data and performed a `train_test_split`, we can tokenize and vectorize our comments. We will be using the `TFIDF` vectorizer as it is a a better match with the `KNN` model than the `bagofwords`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90488a79",
+   "metadata": {},
+   "source": [
+    "Below is a custom tokenizer function which we will pass through our TFIDF vectorizer. It splits the comments into words, eliminates numbers and punctuation, and stems the ends of words, leaving just the root."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "d3054631",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#instantiating stemmer and stop words\n",
     "stemmer = nltk.stem.PorterStemmer()\n",
     "stop_words = stopwords.words('english')\n",
     "\n",
+    "# custom tokenizer function\n",
     "def tokenizer(sentence):\n",
     "    \n",
-    "    num_range = range(0,31)\n",
+    "    num_range = range(0,100) # num range to loop through\n",
     "    \n",
-    "    for num in num_range:\n",
+    "    for num in num_range: # looping through num range to filter out numbers\n",
     "        sentence = sentence.replace(str(num), '')\n",
     "    \n",
-    "    # remove punctuation and set to lower case\n",
+    "    # removing punctuation and setting to lower case\n",
     "    for punctuation_mark in string.punctuation:\n",
     "        sentence = sentence.replace(punctuation_mark,'').lower()\n",
     "        \n",
     "    \n",
-    "    # split sentence into words\n",
+    "    # splitting sentence into words\n",
     "    words_list = sentence.split(' ')\n",
-    "    tokens = []\n",
+    "    \n",
+    "    tokens = [] # list to be filled with tokens\n",
     "    \n",
     "    \n",
-    "    # remove stopwords and any tokens that are just empty strings\n",
+    "    # removing stopwords and any empty strings\n",
     "    for word in words_list:\n",
     "        if (not word in stop_words) and (word!=''):\n",
     "            # Stem words\n",
@@ -209,8 +225,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "344000e2",
+   "metadata": {},
+   "source": [
+    "We want our tokens to be present in at least 25 documents, be split using our custom tokenizer, and to be left with only the 1500 most prevalent tokens."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7ee9a921",
    "metadata": {},
    "outputs": [
@@ -224,18 +248,29 @@
     }
    ],
    "source": [
+    "# instantiaing tfidf with custom tokenizer\n",
     "tfidf = TfidfVectorizer(min_df=25, tokenizer=tokenizer, max_features=1500, dtype=np.float32)\n",
     "\n",
+    "# fitting to data\n",
     "tfidf.fit(X_train)\n",
     "\n",
+    "# transformations \n",
     "train_tokens = tfidf.transform(X_train)\n",
     "val_tokens = tfidf.transform(X_val)\n",
     "test_tokens = tfidf.transform(X_test)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "696546b3",
+   "metadata": {},
+   "source": [
+    "Having both tokenized and vectorized our comments, we will turn them into a dataframe both to briefly examine them, and to pass them through our KNN model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "4b62c86f",
    "metadata": {},
    "outputs": [
@@ -10306,12 +10341,13 @@
        "4   0.0  0.0   0.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# turning tokens + vectors into dataframe\n",
     "train_tfidf = pd.DataFrame(columns=tfidf.get_feature_names(), data=train_tokens.toarray())\n",
     "\n",
     "train_tfidf.head()"
@@ -10319,7 +10355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "db80cab1",
    "metadata": {},
    "outputs": [
@@ -10329,18 +10365,19 @@
        "(142131, 1500)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# verifying shape\n",
     "train_tfidf.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "01896006",
    "metadata": {},
    "outputs": [
@@ -10350,12 +10387,13 @@
        "(47378, 1500)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# validation into dataframe\n",
     "val_tfidf = pd.DataFrame(columns=tfidf.get_feature_names(), data=val_tokens.toarray())\n",
     "\n",
     "val_tfidf.shape"
@@ -10363,7 +10401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "b0f5c4d1",
    "metadata": {},
    "outputs": [
@@ -10373,22 +10411,33 @@
        "(63170, 1500)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# test into dataframe\n",
     "test_tfidf = pd.DataFrame(columns=tfidf.get_feature_names(), data=test_tokens.toarray())\n",
     "\n",
     "test_tfidf.shape"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "3d7b407c",
+   "cell_type": "markdown",
+   "id": "da919696",
    "metadata": {},
+   "source": [
+    "We are ready to run our data through the KNN model. We will be using the metric of `cosine`, which represents `cosine similarity`. Cosine similarity measures the relationship between data points through their relative angle. An angle closer to zero indicates a greater similarity, while an angle of 90 indicates no relationship. This is an alternative to using a `distance` measure, which would calculate how far apart data points are from one another. Cosine similarity is the best measure in our case, and is generally better suited for text data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3d7b407c",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -10401,18 +10450,35 @@
     }
    ],
    "source": [
+    "# instantiating knn model and fitting to train\n",
     "KNN_model = KNeighborsClassifier(metric='cosine', n_jobs=4)\n",
     "KNN_model.fit(train_tfidf, y_train)\n",
     "\n",
-    "# Score the model on the test set\n",
+    "# Scoring model, printing scores\n",
     "print(f'Train score: {KNN_model.score(train_tfidf, y_train)}')\n",
     "print(f'Validation score: {KNN_model.score(val_tfidf, y_val)}')\n",
     "print(f'Test score: {KNN_model.score(test_tfidf, y_test)}')\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c721448d",
+   "metadata": {},
+   "source": [
+    "Our `validation` and `test` scores differ from our `train` score by 0.13, which is an indicator that our model is overfit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ee9cf16",
+   "metadata": {},
+   "source": [
+    "The most obvious place to look when faced with an overfit KNN model is the number of neighbors. Higher numbers of neighbors lead to overfitting, so we will only be checking `n_neighbors` values **below** the default, which is 5. Below we will run loop through the different `n_neighbors` values and check the corresponding scores."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "c67cc45d",
    "metadata": {},
    "outputs": [
@@ -10420,80 +10486,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working on my model with 1 neighbors...\r"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'tfidf_val' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m#Score the model on the test set\u001b[39;00m\n\u001b[0;32m     14\u001b[0m train_accuracy \u001b[38;5;241m=\u001b[39m KNN_model\u001b[38;5;241m.\u001b[39mscore(train_tfidf, y_train)\n\u001b[1;32m---> 15\u001b[0m val_accuracy \u001b[38;5;241m=\u001b[39m KNN_model\u001b[38;5;241m.\u001b[39mscore(\u001b[43mtfidf_val\u001b[49m, y_val)\n\u001b[0;32m     17\u001b[0m train_acc\u001b[38;5;241m.\u001b[39mappend(train_accuracy)\n\u001b[0;32m     18\u001b[0m val_acc\u001b[38;5;241m.\u001b[39mappend(val_accuracy)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'tfidf_val' is not defined"
+      "Calculating score with 4 neighbor/s...\r"
      ]
     }
    ],
    "source": [
-    "neighbors = range(1, 4)  # step by 2 so only odd numbers show up\n",
+    "neighbors = range(1, 5)  # range between 1,4\n",
     "\n",
-    "train_acc = []\n",
+    "train_acc = [] # empty lists\n",
     "val_acc = []\n",
     "\n",
+    "# looping through neighbours to find best fit\n",
     "for n in neighbors: \n",
-    "    print(f\"Working on my model with {n} neighbors...\", end=\"\\r\")\n",
+    "    print(f\"Calculating score with {n} neighbor/s...\", end=\"\\r\")\n",
     "    \n",
-    "    #Instantiate the model & fit it to our data\n",
+    "    #Instantiating the model & fitting to data\n",
     "    KNN_model = KNeighborsClassifier(n_neighbors=n, metric='cosine', n_jobs=4)\n",
     "    KNN_model.fit(train_tfidf, y_train)\n",
     "    \n",
-    "    #Score the model on the test set\n",
+    "    #Scoring model on train and val\n",
     "    train_accuracy = KNN_model.score(train_tfidf, y_train)\n",
-    "    val_accuracy = KNN_model.score(tfidf_val, y_val)\n",
+    "    val_accuracy = KNN_model.score(val_tfidf, y_val)\n",
     "    \n",
+    "    #appending lists with accuracies\n",
     "    train_acc.append(train_accuracy)\n",
     "    val_acc.append(val_accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "dccef759",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Trick to calculate the ideal k value: \n",
+    "#Trick to find the ideal n value: \n",
     "\n",
-    "# index the value that is largest in the test accuracy\n",
+    "# indexing highest accuracy\n",
     "index_of_max = np.argmax(val_acc)\n",
     "\n",
-    "# the corresponding best k value\n",
-    "best_k = neighbors[index_of_max]\n",
+    "# the corresponding best n value\n",
+    "best_n = neighbors[index_of_max]\n",
     "\n",
-    "best_k"
+    "best_n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea570a79",
+   "metadata": {},
+   "source": [
+    "Our best `n` is 3, so we will now pass that into our KNN model to see if it mitigates our overfitting problem."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c86971e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score: 0.7545292722910555\n",
+      "Validation score: 0.5875300772510448\n"
+     ]
+    }
+   ],
    "source": [
-    "KNN_model = KNeighborsClassifier(n_neighbors= , metric='cosine', n_jobs=4)\n",
+    "# running model with updated nearest neighbors\n",
+    "KNN_model = KNeighborsClassifier(n_neighbors=3, metric='cosine', n_jobs=4)\n",
     "KNN_model.fit(train_tfidf, y_train)\n",
     "\n",
-    "# Score the model on the test set\n",
+    "# Scoring and printing scores\n",
     "print(f'Train score: {KNN_model.score(train_tfidf, y_train)}')\n",
-    "print(f'Validation score: {KNN_model.score(val_tfidf, y_val)}')\n",
-    "print(f'Test score: {KNN_model.score(test_tfidf, y_test)}')"
+    "print(f'Validation score: {KNN_model.score(val_tfidf, y_val)}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2358afbf",
+   "metadata": {},
+   "source": [
+    "A `n_neighbors` of 3 got us a significant boost in our `train` score, as well as a marginal boost to our `validation` score. Our overfitting, however, is now worse. Maybe there's a fault in my logic.."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "688fa4c8",
+   "id": "8a48365f",
    "metadata": {},
    "outputs": [],
    "source": []
