--- a/Notebooks/reddit_eda_1.ipynb
+++ b/Notebooks/reddit_eda_1.ipynb
@@ -21,7 +21,7 @@
    "id": "58966b98",
    "metadata": {},
    "source": [
-    "#### 10/20/2023"
+    "#### Notebook #1"
    ]
   },
   {
@@ -40,8 +40,11 @@
     "### Table of Contents\n",
     "\n",
     "1)  <a href=\"#prelim\" id=\"top\">Preliminary Analysis</a> \n",
-    "\n",
-    "2) <a href=\"#null\">Null Values/Duplicates</a>"
+    "2) <a href=\"#null\">Null Values/Duplicates</a>\n",
+    "3) <a href=\"#ups\">Ups/Downs</a>\n",
+    "4) <a href=\"#score\">Score</a>\n",
+    "5) <a href=\"#author\">Authors</a>\n",
+    "6) <a href=\"#subs\">Subreddit</a>"
    ]
   },
   {
@@ -5126,7 +5129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
