brief intro to the madhouse

--- a/Notebooks/reddit_eda_V2_2.ipynb
+++ b/Notebooks/reddit_eda_V2_2.ipynb
@@ -21,7 +21,7 @@
    "id": "e8350b98-11a7-49d0-a2a1-c739adf653f6",
    "metadata": {},
    "source": [
-    "#### 11/10/2023"
+    "#### Notebook #2"
    ]
   },
   {
@@ -42,6 +42,17 @@
     "2)  <a href=\"#date\">Dates</a>\n",
     "3)  <a href=\"#subs\">Subreddits</a>\n",
     "4)  <a href=\"#end\">Conclusion</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97fe7c87-6c62-45bf-8658-5953638ac88b",
+   "metadata": {},
+   "source": [
+    "## Intro\n",
+    "\n",
+    "This notebook is a continuation of the previous EDA and serves to tie up some loose ends with the intent of having the data ready for modeling.\n",
+    "This is number 2 in a series of notebooks, the order of which being indicated by the number at the end of the name. The following notebook will contain tokenization and vectorization which will be used to do some further EDA with respect to the text data."
    ]
   },
   {
