making it pretty

--- a/Notebooks/comment_parent_logreg_4.ipynb
+++ b/Notebooks/comment_parent_logreg_4.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b5adf175-5e9e-4572-8db6-15cc1252e4b3",
+   "metadata": {},
+   "source": [
+    "## Comment + Parent Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34cfffec-a9f5-41df-b092-efb563a1fc14",
+   "metadata": {},
+   "source": [
+    "### Notebook #4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb24c1bc-5d44-4617-9bb8-34ef2b87baeb",
    "metadata": {},
    "source": [
