--- a/Notebooks/robust_train.ipynb
+++ b/Notebooks/robust_train.ipynb
@@ -749,9 +749,9 @@
    "source": [
     "\n",
     "\n",
-    "neural_network = MLPClassifier(verbose=True, max_iter=100, random_state=42)\n",
+    "MLP = MLPClassifier(verbose=True, max_iter=50, random_state=42)\n",
     "\n",
-    "neural_network.fit(new_X, y)"
+    "MLP.fit(new_X, y)"
    ]
   },
   {
@@ -770,8 +770,8 @@
     }
    ],
    "source": [
-    "print(f'Train: {neural_network.score(X_train, y_train)}')\n",
-    "print(f'Val: {neural_network.score(X_val, y_val)}')"
+    "print(f'Train: {MLP.score(X_train, y_train)}')\n",
+    "print(f'Val: {MLP.score(X_val, y_val)}')"
    ]
   },
   {
@@ -781,7 +781,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_val_predict = neural_network.predict(X_val)"
+    "new_val_predict = MLP.predict(X_val)"
    ]
   },
   {
@@ -818,7 +818,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_probas = neural_network.predict_proba(X_val)"
+    "new_probas = MLP.predict_proba(X_val)"
    ]
   },
   {
@@ -833,17 +833,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 108,
    "id": "480e3c13-1e20-4e93-ae57-97d6d5583625",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vary thresholds by 0.05 from 0.05 to 0.95\n",
+    "thresholds = np.arange(0.05, 1, 0.05)\n",
+    "\n",
+    "precisions = []\n",
+    "recalls = []\n",
+    "\n",
+    "for threshold in thresholds:\n",
+    "\n",
+    "    # Apply threshold\n",
+    "    y_threshold = np.where(new_probas > threshold, 1, 0)\n",
+    "    \n",
+    "    # Calculate precision and recall\n",
+    "    precision = precision_score(y_val, y_threshold)\n",
+    "    recall = recall_score(y_val, y_threshold)\n",
+    "    \n",
+    "    # Append to list\n",
+    "    precisions.append(precision)\n",
+    "    recalls.append(recall)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "f2cceeed-146e-4447-b440-b7b4830c882b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x26bf845f9d0>"
+       "<matplotlib.legend.Legend at 0x26c1e50c550>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -859,25 +887,6 @@
     }
    ],
    "source": [
-    "# Vary thresholds by 0.05 from 0.05 to 0.95\n",
-    "thresholds = np.arange(0.05, 1, 0.05)\n",
-    "\n",
-    "precisions = list()\n",
-    "recalls = list()\n",
-    "\n",
-    "for threshold in thresholds:\n",
-    "\n",
-    "    # Apply threshold\n",
-    "    y_threshold = np.where(new_probas > threshold, 1, 0)\n",
-    "    \n",
-    "    # Calculate precision and recall\n",
-    "    precision = precision_score(y_val, y_threshold)\n",
-    "    recall = recall_score(y_val, y_threshold)\n",
-    "    \n",
-    "    # Append to list\n",
-    "    precisions.append(precision)\n",
-    "    recalls.append(recall)\n",
-    "\n",
     "# Visualize the result\n",
     "plt.figure()\n",
     "plt.plot(thresholds, precisions, label='precision', marker='o')\n",
@@ -926,8 +935,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "9ede2429-823e-4430-a6d4-5a6ac01a1a32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_tokenizer(document):\n",
+    "    \n",
+    "    \n",
+    "    # replacing punctuation with empty string\n",
+    "    for punc in string.punctuation:\n",
+    "        document = document.replace(punc, '')\n",
+    "        \n",
+    "        # removing numbers and setting all documents to lowercase    \n",
+    "    document = re.sub(\"\\d+\", \"\", document).lower()\n",
+    "    \n",
+    "        # splitting documents and appending tokens list\n",
+    "    tokens = document.split(' ')\n",
+    "        \n",
+    "    \n",
+    "        \n",
+    "\n",
+    "    return tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "69103068-445c-429f-9e3b-c3ff57040a59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vectorizer(document):\n",
+    "\n",
+    "    tokens = test_tokenizer(document)\n",
+    "    two_d_vec = []\n",
+    "    \n",
+    "    size = model.vector_size\n",
+    "    word_vec_doc = np.zeros(size)\n",
+    "    count = 1\n",
+    "    \n",
+    "\n",
+    "    for word in tokens:\n",
+    "        if word in model:\n",
+    "            count +=1\n",
+    "            word_vec_doc += model[word]\n",
+    "    \n",
+    "    word_vec_doc = word_vec_doc / count\n",
+    "    two_d_vec.append(word_vec_doc)\n",
+    "    \n",
+    "    return two_d_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "09eb37b5-b73c-4302-a0fa-70097f900e3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "document1 = \"This is simply a test. Can I call a function within a function?\"\n",
+    "\n",
+    "vekt_doc = vectorizer(document1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "e092ae73-ac79-46fe-9c19-f0e800f2a7cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: 0.13\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = MLP.predict_proba(vekt_doc)[0][1]\n",
+    "print(f'Result: {round(result, 2)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "e8a7a0e8-c998-4e8f-a344-67076973902a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence1 = \"Fair and logical.\"\n",
+    "sentence2 = \"He said no. Seems fair and logical to me.\"\n",
+    "sentence3 = \"He said no. Very fair and logical\"\n",
+    "sentence4 = \"He said no. Very fair and very logical.\"\n",
+    "sentence5 = \"He said no. That's fair and logical.\"\n",
+    "sentence6 = \"He said no. Fair and logical.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "f0e7b766-3b62-4a16-8bc4-0953a5af6fdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc1 = vectorizer(sentence1)\n",
+    "doc2 = vectorizer(sentence2)\n",
+    "doc3 = vectorizer(sentence3)\n",
+    "doc4 = vectorizer(sentence4)\n",
+    "doc5 = vectorizer(sentence5)\n",
+    "doc6 = vectorizer(sentence6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "381b9935-6fa5-4f16-8e7c-c794f7887063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proba1 = round(MLP.predict_proba(doc1)[0][1], 2)\n",
+    "proba2 = round(MLP.predict_proba(doc2)[0][1], 2)\n",
+    "proba3 = round(MLP.predict_proba(doc3)[0][1], 2)\n",
+    "proba4 = round(MLP.predict_proba(doc4)[0][1], 2)\n",
+    "proba5 = round(MLP.predict_proba(doc4)[0][1], 2)\n",
+    "proba6 = round(MLP.predict_proba(doc4)[0][1], 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "27940dc4-9dfd-463f-b080-183e31d81944",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROBABILITY SARCASTIC: \n",
+      "\n",
+      "Sentence1: 0.34 \n",
+      " Sentence2: 0.7 \n",
+      " Sentence3: 0.58 \n",
+      " Sentence4: 0.49 \n",
+      "\n",
+      "Sentence5: 0.49 \n",
+      " Sentence6: 0.49\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('PROBABILITY SARCASTIC: \\n')\n",
+    "print(f'Sentence1: {proba1} \\n Sentence2: {proba2} \\n Sentence3: {proba3} \\n Sentence4: {proba4} \\n')\n",
+    "print(f'Sentence5: {proba5} \\n Sentence6: {proba6}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18eece3e-7fc4-4fb3-88a8-b43bcaf95d26",
    "metadata": {},
    "outputs": [],
    "source": []
